# research-loop-self-improvement

./: .gitignore  LICENSE  Makefile  README.md
docs/hypothesis-1/01-05-26-gpt-5.3-codex-spark-deadcode-eval/: agent-deadcode-evaluation.md
docs/hypothesis-1/01-05-26-gpt-5.3-codex-spark-deadcode-eval/research-loop-agent-dead1-dead-spark-4h-1-20260430-140532/: metadata.txt
docs/hypothesis-1/01-05-26-gpt-5.3-codex-spark-deadcode-eval/research-loop-agent-dead2-dead-spark-4h-2-20260430-140533/: metadata.txt
docs/hypothesis-1/01-05-26-gpt-5.3-codex-spark-deadcode-eval/research-loop-agent-dead3-dead-spark-4h-3-20260430-140534/: metadata.txt
docs/hypothesis-1/01-05-26-gpt-5.3-codex-spark-standard-eval/research-loop-agent-std1-std-spark-4h-rerun-1-20260430-131110/: metadata.txt
docs/hypothesis-1/01-05-26-gpt-5.3-codex-spark-standard-eval/research-loop-agent-std1-std-spark-4h-rerun-1-20260501-001804/: metadata.txt
docs/hypothesis-1/01-05-26-gpt-5.3-codex-spark-standard-eval/research-loop-agent-std2-std-spark-4h-rerun-2-20260430-131111/: metadata.txt
docs/hypothesis-1/03-05-26-gpt-5.5-deadcode-eval/: agent-deadcode-evaluation.md
docs/hypothesis-1/04-05-26-gpt-5.3-codex-deadcode-eval/: agent-deadcode-evaluation.md  orchestrator-ledger.md  orchestrator-state.json
docs/hypothesis-1/05-05-26-gpt-5.3-codex-standard-eval/: orchestrator-ledger.md
research-loop/: program.md  pyproject.toml
research-loop/editable/: __init__.py  config.toml  config_loader.py  train.py
research-loop/immutable/: __init__.py  eval.py  prepare.py
(+896 files in other folders)
