[project]
name = "research-loops"
version = "0.1.0"
description = "Autonomous ML research experiment scaffold"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "MIT"
dependencies = [
    "matplotlib>=3.9",
]

[project.optional-dependencies]
research = [
    "numpy>=2.2.6",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch==2.9.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
